support running LifeX11 with exec:exec